# intelligent_rh

./: .env.example  .gitignore  README.md  pyproject.toml
rh_api/: main.py
rh_api/db/: mongoConnection.py  mongodb.py
rh_api/modules/interviewer/dto/: __init__.py  interview_context_dto.py  interview_response_dto.py
rh_api/modules/interviewer/prompts/: content_prompt.txt
rh_api/modules/interviewer/promptsv2/: system_prompt.txt
rh_api/modules/interviewer/promptsv2/career_growth/: metadata.json  prompt.txt
rh_api/modules/interviewer/promptsv2/career_perspectives/: prompt.txt
rh_api/modules/interviewer/promptsv2/professional_development_plan/: prompt.txt
rh_api/modules/interviewer/services/: questions_generation.py
